--- a/source/assets/stylesheets/style.css.scss
+++ b/source/assets/stylesheets/style.css.scss
@@ -1,29 +1,51 @@
-// This is your master stylesheet
+@import "bootstrap.min";
 
-// Use SASS to include CSS partials
-@import "reset";
-@import "typography";
-@import "blueprint/grid";
-
-// Add some basic styling
-.clear {
-  clear: both;
+body {
+  background: url('images/bg-body.png');
 }
 
-#container {
-  @include container;
-  @include prepend(1);
-  border-left: 1px solid;
-  border-right: 1px solid;
+header h1 a {
+  background: url('images/logo.png') no-repeat 0 0;
+  display: block;
+  height: 66px;
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  width: 350px;
 }
 
-#content {
-  @include column(15);
-  @include border(#555, 2px);
+header, #slideshow, #content-primary {
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  margin-bottom: 30px;
 }
 
-#sidebar {
-  @include column(7);
-  @include prepend(1);
-  @include last;
+nav span {
+  font-size: 14px;
+  line-height: 45px;
+}
+
+#slideshow {
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+}
+
+header {
+  -webkit-border-bottom-left-radius: 7px;
+  -webkit-border-bottom-right-radius: 7px;
+  -moz-border-radius-bottomleft: 7px;
+  -moz-border-radius-bottomright: 7px;
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
+}
+
+#content-primary {
+  background-color: rgba(0, 0, 0, 0.8);
+  -webkit-border-top-left-radius: 7px;
+  -webkit-border-top-right-radius: 7px;
+  -moz-border-radius-topleft: 7px;
+  -moz-border-radius-topright: 7px;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
 }
