--- a/source/assets/stylesheets/style.css.scss
+++ b/source/assets/stylesheets/style.css.scss
@@ -59,6 +59,13 @@ header {
   border-top-right-radius: 7px;
   margin-bottom: 0;
 
+  .featured-tile {
+    img {
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+    }
+  }
   .well {
     color: #333;
   }
