--- a/source/assets/stylesheets/style.css.scss
+++ b/source/assets/stylesheets/style.css.scss
@@ -54,6 +54,17 @@ header {
   border-bottom-right-radius: 7px;
 }
 
+.coming-soon-overlay {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 999px;
+
+  &:hover {
+    background: url('images/coming-soon.png') no-repeat center center;
+  }
+}
+
 #content-primary {
   background-color: rgba(0, 0, 0, 0.8);
   -webkit-border-top-left-radius: 7px;
@@ -65,11 +76,16 @@ header {
   margin-bottom: 0;
 
   .featured-tile {
-    img {
-      -webkit-border-radius: 4px;
-      -moz-border-radius: 4px;
-      border-radius: 4px;
-      margin: 0 0 9px 0;
+    a {
+      display: block;
+      position: relative;
+
+      img {
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+        margin: 0 0 9px 0;
+      }
     }
   }
   .well {
