--- a/source/assets/stylesheets/style.css.scss
+++ b/source/assets/stylesheets/style.css.scss
@@ -8,14 +8,24 @@ body {
   font-family: $proxima-nova-regular;
 }
 
-header h1 a {
-  background: url('images/logo.png') no-repeat 0 0;
-  display: block;
-  height: 66px;
-  overflow: hidden;
-  text-indent: 100%;
-  white-space: nowrap;
-  width: 350px;
+a:hover, a:active {
+  color: #0099e6;
+}
+
+header {
+  h1 a {
+    background: url('images/logo.png') no-repeat 0 0;
+    display: block;
+    height: 66px;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+    width: 350px;
+  }
+
+  input[type="text"] {
+    margin-right: 5px;
+  }
 }
 
 header, #content-top, #content-primary, footer {
