Added slideshow and promo tile images.

--- a/source/assets/stylesheets/style.css.scss
+++ b/source/assets/stylesheets/style.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import "_bootstrap_overrides";
+@import "nivo-slider";
 @import "_fonts";
 
 body {
@@ -55,6 +56,8 @@ footer {
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   border-radius: 7px;
+  padding: 0;
+  width: 1210px;
 
   h3 {
     color: #add946;
