--- a/source/assets/stylesheets/style.css.scss
+++ b/source/assets/stylesheets/style.css.scss
@@ -77,16 +77,42 @@ footer {
     }
 
     .next, .prev {
+      background-color: rgba(0, 0, 0, 0.8);
+      background-image: url('images/slideshow-controls.png');
+      background-position: 0 0;
       position: absolute;
-      top: 206px;
-      left: -24px;
-      width: 24px;
-      height: 43px;
+      top: 62px;
+      left: -19px;
+      width: 19px;
+      height: 350px;
       display: block;
       z-index: 101;
+      text-indent: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.84);
+      }
+    }
+
+    .prev {
+      -webkit-border-top-left-radius: 4px;
+      -webkit-border-bottom-left-radius: 4px;
+      -moz-border-radius-topleft: 4px;
+      -moz-border-radius-bottomleft: 4px;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
     }
 
     .next {
+      -webkit-border-top-right-radius: 4px;
+      -webkit-border-bottom-right-radius: 4px;
+      -moz-border-radius-topright: 4px;
+      -moz-border-radius-bottomright: 4px;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+      background-position: -19px 0;
       left: 1210px;
     }
   }
