--- a/source/assets/stylesheets/style.css.scss
+++ b/source/assets/stylesheets/style.css.scss
@@ -13,6 +13,8 @@ a:hover, a:active {
 }
 
 header {
+  position: relative;
+
   h1 a {
     background: url('images/logo.png') no-repeat 0 0;
     display: block;
@@ -21,6 +23,11 @@ header {
     text-indent: 100%;
     white-space: nowrap;
     width: 350px;
+  }
+
+  #social-icons {
+    position: absolute;
+    right: 20px;
   }
 
   form {
